# quickfix-cpp

./: quickfix_vs16.sln
examples/: CMakeLists.txt
examples/tradeclient-apifiny/: Application.cpp  Application.h  CMakeLists.txt  example_tradeclient_apifiny_vs16.vcxproj  tradeclient.cfg  tradeclient.cpp  tradeclient.h
examples/tradeclient-wintmute/: Application.cpp  Application.h  CMakeLists.txt  example_tradeclient_wintmute_vs16.vcxproj  tradeclient.cfg  tradeclient.cpp  tradeclient.h
src/rust/: Entrypoint.cpp  Entrypoint.h
